fixing width on mobile

--- a/app/assets/stylesheets/desktop/web/_static_pages.scss
+++ b/app/assets/stylesheets/desktop/web/_static_pages.scss
@@ -6,7 +6,8 @@
 }
 
 .Intro{
-	margin: 50px 15px 210px;
+	margin: 50px 0 210px;
+	width: 1080px;
 
 	&__main {
 		background-image: url("http://res.cloudinary.com/dmfclza05/image/upload/v1498882879/top/top_main.jpg");
